tests/expr/right_shift_negative_value/stderr.golden
error: negative value of right shift -9
bus.fbd +2:25
   |
 2 | 	C config; width = 1 >> -9
   | 	                       ^^
